radio buttons for shift input page

--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,28 +1,43 @@
-<ion-view view-title="Dashboard">
-  <ion-content class="padding">
-    <div class="list card">
-      <div class="item item-divider">Recent Updates</div>
-      <div class="item item-body">
-        <div>
-          There is a fire in <b>sector 3</b>
+<ion-view view-title="Shift input">
+<ion-content>
+  <ion-list>
+    <ion-item>
+    1
+    <div class="button-bar">
+      <label class="item item-radio">
+        <input type="radio" name="group">
+        <div class="item-content">
+          A
         </div>
-      </div>
-    </div>
-    <div class="list card">
-      <div class="item item-divider">Health</div>
-      <div class="item item-body">
-        <div>
-          You ate an apple today!
+        <i class="radio-icon ion-checkmark"></i>
+      </label>
+
+      <label class="item item-radio">
+        <input type="radio" name="group">
+        <div class="item-content">
+          B
         </div>
-      </div>
-    </div>
-    <div class="list card">
-      <div class="item item-divider">Upcoming</div>
-      <div class="item item-body">
-        <div>
-          You have <b>29</b> meetings on your calendar tomorrow.
+        <i class="radio-icon ion-checkmark"></i>
+      </label>
+
+      <label class="item item-radio">
+        <input type="radio" name="group">
+        <div class="item-content">
+          C
         </div>
-      </div>
+        <i class="radio-icon ion-checkmark"></i>
+      </label>
+
+      <label class="item item-radio">
+        <input type="radio" name="group">
+        <div class="item-content">
+          D
+        </div>
+        <i class="radio-icon ion-checkmark"></i>
+      </label>
+
     </div>
-  </ion-content>
+    </ion-item>
+  </ion-list>
+</ion-content>
 </ion-view>
