added a submit button

--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -15,6 +15,9 @@
 	  <label class="item item-input">
 		  <input type="password"  placeholder="Password">
 		</label>
+		<button class="button button-block button-positive">
+      Submit
+    </button>
 	</div>
 
   </ion-content>
