setup angular stuff

--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,19 +1,18 @@
 <ion-view view-title="Account">
   <ion-content>
-
   	<div class="list">
   		<label class="item item-input" >
-		  <input type="email" placeholder="Email">
+		  <input type="email" placeholder="Email" ng-model="email">
 		</label>
 	  <label class="item item-input">
-	    <input type="text" placeholder="First Name">
+	    <input type="text" placeholder="First Name" ng-model="firstName">
 	  </label>
 	  <label class="item item-input">
-	    <input type="text" placeholder="Last Name">
+	    <input type="text" placeholder="Last Name" ng-model="lastName">
 	  </label>
 
 	  <label class="item item-input">
-		  <input type="password"  placeholder="Password">
+		  <input type="password"  placeholder="Password" ng-model="password">
 		</label>
 	</div>
 
