--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -14,7 +14,7 @@
 	  <label class="item item-input">
 		  <input type="password"  placeholder="Password" ng-model="password">
 		</label>
-		<button class="button button-block button-positive">
+		<button class="button button-block button-positive" ng-click="createUser(email, firstName, lastName, password)">
       Submit
     </button>
 	</div>
