--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -5,6 +5,11 @@ navigation history that also transitions its views in and out.
 -->
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
+  <!-- Groups Tab -->
+  <ion-tab title="Groups" icon="ion-ios-people" href="#/tab/groups">
+    <ion-nav-view name="tab-groups"></ion-nav-view>
+  </ion-tab>
+
   <!-- Dashboard Tab -->
   <ion-tab title="Shift input" icon="ion-calendar" href="#/tab/dash">
     <ion-nav-view name="tab-dash"></ion-nav-view>
