added the plus button on groups

--- a/www/templates/tab-groups.html
+++ b/www/templates/tab-groups.html
@@ -1,4 +1,12 @@
 <ion-view view-title="Groups" ng-init="fetchGroups()">
+<ion-nav-bar>
+  <ion-nav-buttons side="right" >
+    <button class="button icon ion-plus-round" ng-click="doSomething()">
+      
+    </button>
+  </ion-nav-buttons>
+</ion-nav-bar>
+
 <ion-content>
 
 <ion-spinner icon="lines" ng-show="loader"></ion-spinner>
