--- a/www/templates/tab-groups.html
+++ b/www/templates/tab-groups.html
@@ -1,9 +1,9 @@
 <ion-view view-title="Groups" ng-init="fetchGroups()">
 <ion-nav-bar>
   <ion-nav-buttons side="right" >
-    <button class="button icon ion-plus-round" ng-click="doSomething()">
+    <a class="button button-icon icon ion-plus-round" href="#/tab/groups/create">
       
-    </button>
+    </a>
   </ion-nav-buttons>
 </ion-nav-bar>
 
