--- a/www/templates/group-detail.html
+++ b/www/templates/group-detail.html
@@ -1,5 +1,5 @@
 <ion-view view-title="{{groupName}}">
-  <ion-content class="padding">
+  <ion-content>
     <ion-spinner icon="lines" ng-show="loader"></ion-spinner>
 
     <ion-list >
