--- a/www/templates/group-detail.html
+++ b/www/templates/group-detail.html
@@ -1,4 +1,5 @@
-<ion-view view-title="{{groupName}}">
+<ion-view>
+<ion-nav-title>{{groupName}}</ion-nav-title>
   <ion-content>
     <ion-spinner icon="lines" ng-show="loader"></ion-spinner>
 
