--- a/www/templates/group-detail.html
+++ b/www/templates/group-detail.html
@@ -1,12 +1,30 @@
 <ion-view>
-<ion-nav-title>{{groupName}}</ion-nav-title>
+<ion-nav-title>Details</ion-nav-title>
   <ion-content>
     <ion-spinner icon="lines" ng-show="loader"></ion-spinner>
+    <div class="detailed-group-header-holder">
+      <div>
+        
+        {{groupName}}
+        {{message}}
+      </div>
+    </div>
 
+    <button class="button button-full button-balanced">
+      Join
+    </button>
+
+    <div class="item item-divider">
+      Members:
+    </div>
     <ion-list >
       <ion-item ng-repeat="user in users" type="item-text-wrap">
         {{user.first_name}} {{user.last_name}}
       </ion-item>
     </ion-list>
+
+    <button class="button button-full button-balanced">
+      Join
+    </button>
   </ion-content>
 </ion-view>
