--- a/www/templates/group-detail.html
+++ b/www/templates/group-detail.html
@@ -3,16 +3,20 @@
   <ion-content>
     <ion-spinner icon="lines" ng-show="loader"></ion-spinner>
     <div class="detailed-group-header-holder">
+      <div class="title">
+        <h4>
+          {{groupName}}
+        </h1>
+      </div>
       <div>
-        
-        {{groupName}}
         {{message}}
       </div>
+      <br>
+      <button class="button button-balanced">
+        Join group
+      </button>
     </div>
 
-    <button class="button button-full button-balanced">
-      Join
-    </button>
 
     <div class="item item-divider">
       Members:
@@ -23,8 +27,10 @@
       </ion-item>
     </ion-list>
 
-    <button class="button button-full button-balanced">
-      Join
-    </button>
+    <div class="detailed-group-footer-holder">
+      <button class="button button-balanced">
+        Join group
+      </button>
+    </div>
   </ion-content>
 </ion-view>
