--- a/www/templates/group-detail.html
+++ b/www/templates/group-detail.html
@@ -11,7 +11,7 @@
       <div>
         {{message}}
       </div>
-      <button class="button button-balanced">
+      <button class="button button-balanced" ng-click="joinGroup()">
         Join group
       </button>
     </div>
@@ -27,7 +27,7 @@
     </ion-list>
 
     <div class="detailed-group-footer-holder">
-      <button class="button button-balanced">
+      <button class="button button-balanced" ng-click="joinGroup()">
         Join group
       </button>
     </div>
