--- a/www/css/groups/group_detail.css
+++ b/www/css/groups/group_detail.css
@@ -6,9 +6,19 @@
   margin-top: 8px;
 }
 
+.detailed-group-header-holder button.clicked {
+  padding-left: 50px;
+}
+
 .detailed-group-header-holder .leave-group-link {
   margin-left: -20px;
   line-height: 4.6;
+}
+
+.detailed-group-header-holder .join-leave-loader {
+  position: absolute;
+  top: 10px;
+  left: 10px;
 }
 
 .detailed-group-footer-holder {
