--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -11,8 +11,8 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <!-- Dashboard Tab -->
-  <ion-tab title="Shift input" icon="ion-calendar" href="#/tab/dash">
-    <ion-nav-view name="tab-dash"></ion-nav-view>
+  <ion-tab title="Shifts" icon="ion-calendar" href="#/tab/shifts">
+    <ion-nav-view name="tab-shifts"></ion-nav-view>
   </ion-tab>
 
   <!-- Chats Tab -->
