--- a/www/lib/ionic/css/ionic.css
+++ b/www/lib/ionic/css/ionic.css
@@ -4374,7 +4374,8 @@ ion-tabs.tabs-color-active-dark .tab-item {
   display: block;
   margin-top: 12px;
   margin-left: -110px;
-  height: 280px;
+  /*height: 280px; this was the original height*/
+  height: 170px;
   width: 220px;
   background-color: #fff;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
