--- a/www/templates/group-detail.html
+++ b/www/templates/group-detail.html
@@ -1,5 +1,8 @@
 <ion-view>
 <ion-nav-title>Details</ion-nav-title>
+  <ion-nav-buttons side="left" >
+    <a class="button button-icon icon ion-ios-arrow-back" href="#/tab/groups">Groups</a>
+  </ion-nav-buttons>
   <ion-content>
     <ion-spinner icon="lines" ng-show="loader"></ion-spinner>
     <div class="detailed-group-header-holder">
