Custom back navigation for create group

--- a/www/templates/group-create.html
+++ b/www/templates/group-create.html
@@ -1,4 +1,7 @@
 <ion-view view-title="Create Group">
+  <ion-nav-buttons side="left" >
+    <a class="button button-icon icon ion-ios-arrow-back" href="#/tab/groups">Groups</a>
+  </ion-nav-buttons>
   <ion-content>
   	<div class="list">
   		<label class="item item-input" >
