--- a/www/templates/tab-groups.html
+++ b/www/templates/tab-groups.html
@@ -1,19 +1,14 @@
 <ion-view view-title="Groups" ng-init="fetchGroups()">
   <ion-nav-buttons side="right" >
-    <a class="button button-icon icon ion-plus-round" href="#/tab/groups/create">
-      
-    </a>
+    <a class="button button-icon icon ion-plus-round" href="#/tab/groups/create"></a>
   </ion-nav-buttons>
-  
   <ion-content>
-
     <ion-spinner icon="lines" ng-show="loader"></ion-spinner>
-
-    <ion-list >
+    <ion-list>
       <ion-item ng-repeat="group in groups" class="item-icon-right" type="item-text-wrap" href="#/tab/groups/{{group.id}}">
         {{group.id}}
         {{group.name}}
-      <i class="icon ion-chevron-right icon-accessory"></i>
+        <i class="icon ion-chevron-right icon-accessory"></i>
       </ion-item>
     </ion-list>
   </ion-content>
