--- a/www/templates/shifts-patterns-detail.html
+++ b/www/templates/shifts-patterns-detail.html
@@ -16,7 +16,7 @@
       </div>
 
 
-      <div class="bottom-section-holder">
+      <div class="time-section-holder">
         <div class="row">
           <div class="col">
             <p>
@@ -61,16 +61,20 @@
 
         </div>
 
+        
+      </div>
+      <div class="action-buttons-holder">
         <div>
           <button class="button button-balanced">
             <ion-spinner icon="lines" class="join-leave-loader" ng-show="buttonClicked"></ion-spinner>
             Save
           </button>
-          <button class="button button-balanced">
-            Delete
-          </button>
+          <div>
+            <a href="">
+              Delete
+            </a>
+          </div>
         </div>
-        
       </div>
     </div>
   </ion-content>
