--- a/www/templates/shifts-patterns-detail.html
+++ b/www/templates/shifts-patterns-detail.html
@@ -11,7 +11,7 @@
       <div class="list shift-pattern-list">
         <label class="item item-input item-stacked-label">
           <span class="input-label">Shift pattern name: (tap to edit)</span>
-          <input class="shift-name-input" type="text" placeholder="John" value="{{shiftPattern.name}}">
+          <input class="shift-name-input" type="text" placeholder="E.g. Day Shift" ng-model="shiftPatternName">
         </label>
       </div>
 
@@ -71,7 +71,7 @@
       </div>
       <div class="action-buttons-holder">
         <div>
-          <button class="button button-balanced">
+          <button class="button button-balanced" ng-click="saveShiftPattern()">
             <ion-spinner icon="lines" class="join-leave-loader" ng-show="buttonClicked"></ion-spinner>
             Save
           </button>
