Ability to create new shift pattern

--- a/www/templates/shifts-patterns.html
+++ b/www/templates/shifts-patterns.html
@@ -10,7 +10,7 @@
           <div class="shift-pattern-group-name">
             {{group.name}}
           </div>
-          <a class="add-pattern positive">
+          <a class="add-pattern positive" href="#/tab/shifts/patterns/{{group.id}}/new">
             <i class="icon ion-android-add-circle"></i>
             Add pattern
           </a>
