--- a/www/templates/shifts-patterns-new.html
+++ b/www/templates/shifts-patterns-new.html
@@ -1,5 +1,5 @@
 <ion-view>
-<ion-nav-title>Edit</ion-nav-title>
+<ion-nav-title>Add Pattern</ion-nav-title>
   <ion-nav-buttons side="left" >
     <a class="button button-icon icon ion-ios-arrow-back" href="#/tab/shifts/patterns">Patterns</a>
   </ion-nav-buttons>
@@ -71,15 +71,10 @@
       </div>
       <div class="action-buttons-holder">
         <div>
-          <button class="button button-balanced" ng-click="saveShiftPattern(shiftPatternName)">
+          <button class="button button-balanced" ng-click="createShiftPattern(shiftPatternName)">
             <ion-spinner icon="lines" class="join-leave-loader" ng-show="buttonClicked"></ion-spinner>
-            Save
+            Create
           </button>
-          <div>
-            <a href="">
-              Delete
-            </a>
-          </div>
         </div>
       </div>
     </div>
