Ability to delete shift pattern

--- a/www/css/shifts/shift_patterns_detail.css
+++ b/www/css/shifts/shift_patterns_detail.css
@@ -37,3 +37,7 @@
 .shift-patterns-detail .action-buttons-holder {
   padding: 15px;
 }
+
+.shift-patterns-detail .action-buttons-holder .delete-link {
+  margin-top: 10px;
+}
