--- a/www/templates/shifts-patterns-detail.html
+++ b/www/templates/shifts-patterns-detail.html
@@ -75,8 +75,8 @@
             <ion-spinner icon="lines" class="join-leave-loader" ng-show="buttonClicked"></ion-spinner>
             Save
           </button>
-          <div>
-            <a href="">
+          <div class="delete-link">
+            <a class="assertive" ng-click="deleteShiftPattern()">
               Delete
             </a>
           </div>
