--- a/www/templates/shifts-patterns.html
+++ b/www/templates/shifts-patterns.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Shift patterns" ng-init="fetchShiftPatterns()">
+<ion-view class="shifts-patterns" view-title="Shift patterns" ng-init="fetchShiftPatterns()">
   <ion-nav-buttons side="right" >
     <a class="button button-icon icon ion-android-more-vertical" ng-click="popover.show($event)"></a>
   </ion-nav-buttons>
