Add autofocus to new shift pattern

--- a/www/templates/shifts-patterns-new.html
+++ b/www/templates/shifts-patterns-new.html
@@ -11,7 +11,7 @@
       <div class="list shift-pattern-list">
         <label class="item item-input item-stacked-label">
           <span class="input-label">Shift pattern name: (tap to edit)</span>
-          <input class="shift-name-input" type="text" placeholder="E.g. Day Shift" ng-model="shiftPatternName">
+          <input class="shift-name-input" type="text" placeholder="E.g. Day Shift" ng-model="shiftPatternName" autofocus>
         </label>
       </div>
 
