--- a/www/templates/shifts-patterns.html
+++ b/www/templates/shifts-patterns.html
@@ -1,9 +1,10 @@
-<ion-view class="shifts-patterns" view-title="Shift patterns" ng-init="fetchShiftPatterns()">
+<ion-view class="shifts-patterns" view-title="Shift patterns" ng-init="fetchShiftPatterns()" cache-view="false">
   <ion-nav-buttons side="right" >
     <a class="button button-icon icon ion-android-more-vertical" ng-click="popover.show($event)"></a>
   </ion-nav-buttons>
   <ion-content>
     <ion-spinner icon="lines" ng-show="loader"></ion-spinner>
+    <notification ng-model="message" ng-show="message"></notification>
     <div class="list">
       <ion-list ng-repeat="group in groupsWithShiftTypes">
         <div class="item item-divider shift-pattern-group">
