--- a/www/templates/shifts-patterns-new.html
+++ b/www/templates/shifts-patterns-new.html
@@ -1,5 +1,5 @@
 <ion-view>
-<ion-nav-title>Add Pattern</ion-nav-title>
+<ion-nav-title>New</ion-nav-title>
   <ion-nav-buttons side="left" >
     <a class="button button-icon icon ion-ios-arrow-back" href="#/tab/shifts/patterns">Patterns</a>
   </ion-nav-buttons>
