Show error if left name blank

--- a/www/templates/shifts-patterns-detail.html
+++ b/www/templates/shifts-patterns-detail.html
@@ -12,6 +12,7 @@
         <label class="item item-input item-stacked-label">
           <span class="input-label">Shift pattern name: (tap to edit)</span>
           <input class="shift-name-input" type="text" placeholder="E.g. Day Shift" ng-model="shiftPatternName">
+          <span class="input-label assertive" ng-show="inputError">Please fill in</span>
         </label>
       </div>
 
