--- a/www/templates/shifts-patterns-new.html
+++ b/www/templates/shifts-patterns-new.html
@@ -1,4 +1,4 @@
-<ion-view>
+<ion-view cache-view="false">
 <ion-nav-title>New</ion-nav-title>
   <ion-nav-buttons side="left" >
     <a class="button button-icon icon ion-ios-arrow-back" href="#/tab/shifts/patterns">Patterns</a>
@@ -12,6 +12,7 @@
         <label class="item item-input item-stacked-label">
           <span class="input-label">Shift pattern name: (tap to edit)</span>
           <input class="shift-name-input" type="text" placeholder="E.g. Day Shift" ng-model="shiftPatternName" autofocus>
+          <span class="input-label assertive" ng-show="inputError">Please fill in</span>
         </label>
       </div>
 
