Allow updating of abbreviation on shift types

--- a/www/css/shifts/shift_patterns_detail.css
+++ b/www/css/shifts/shift_patterns_detail.css
@@ -10,6 +10,10 @@
   font-size: 14px;
 }
 
+.shift-pattern-list .item-stacked-label {
+  padding: 5px !important;
+}
+
 .shift-name-input {
   font-size: 18px !important;
 }
