--- a/www/templates/shifts-patterns-detail.html
+++ b/www/templates/shifts-patterns-detail.html
@@ -10,9 +10,18 @@
       </h4>
       <div class="list shift-pattern-list">
         <label class="item item-input item-stacked-label">
-          <span class="input-label">Shift pattern name: (tap to edit)</span>
-          <input class="shift-name-input" type="text" placeholder="E.g. Day Shift" ng-model="shiftPatternName">
-          <span class="input-label assertive" ng-show="inputError">Please fill in</span>
+          <div class="row">
+            <div class="col col-67">
+              <span class="input-label">Shift pattern name:</span>
+              <input class="shift-name-input" type="text" placeholder="E.g. Day Shift" ng-model="shiftPatternName">
+              <span class="input-label assertive" ng-show="inputError">Please fill in</span>
+            </div>
+            <div class="col col-33">
+              <span class="input-label">Abbreviation:</span>
+              <input class="shift-name-input" type="text" placeholder="E.g. Dx" ng-model="abbreviation">
+              <span class="input-label assertive" ng-show="inputError">Please fill in</span>
+            </div>
+          </div>
         </label>
       </div>
 
@@ -72,7 +81,7 @@
       </div>
       <div class="action-buttons-holder">
         <div>
-          <button class="button button-balanced" ng-click="saveShiftPattern(shiftPatternName)">
+          <button class="button button-balanced" ng-click="saveShiftPattern(shiftPatternName, abbreviation)">
             <ion-spinner icon="lines" class="join-leave-loader" ng-show="buttonClicked"></ion-spinner>
             Save
           </button>
