--- a/www/templates/shifts-patterns-detail.html
+++ b/www/templates/shifts-patterns-detail.html
@@ -19,7 +19,8 @@
             <div class="col col-33">
               <span class="input-label">Abbreviation:</span>
               <input class="shift-name-input" type="text" placeholder="E.g. Dx" ng-model="abbreviation">
-              <span class="input-label assertive" ng-show="inputError">Please fill in</span>
+              <span class="input-label assertive" ng-show="abbInputError">Please fill in</span>
+              <span class="input-label assertive" ng-show="lengthError">2 letters max</span>
             </div>
           </div>
         </label>
