--- a/www/css/shifts/shift_patterns.css
+++ b/www/css/shifts/shift_patterns.css
@@ -1,5 +1,10 @@
+.shifts-patterns .shift-pattern-group {
+  white-space: normal !important;
+}
+
 .shifts-patterns .shift-pattern-group-name {
   font-weight: bold;
+  margin-bottom: 5px;
 }
 
 .shifts-patterns .add-pattern {
