--- a/www/templates/shifts-patterns-detail.html
+++ b/www/templates/shifts-patterns-detail.html
@@ -82,10 +82,10 @@
       </div>
       <div class="action-buttons-holder">
         <div>
-          <button class="button button-balanced" ng-click="saveShiftPattern(shiftPatternName, abbreviation)">
-            <ion-spinner icon="lines" class="join-leave-loader" ng-show="buttonClicked"></ion-spinner>
-            Save
+          <button class="button button-balanced" ng-click="saveShiftPattern(shiftPatternName, abbreviation)" ng-disabled="buttonClicked">
+            {{actionButtonText}}
           </button>
+          <ion-spinner icon="lines" class="join-leave-loader" ng-show="buttonClicked"></ion-spinner>
           <div class="delete-link">
             <a class="assertive" ng-click="deleteShiftPattern()">
               Delete
