--- a/www/templates/shifts-patterns-new.html
+++ b/www/templates/shifts-patterns-new.html
@@ -82,10 +82,10 @@
       </div>
       <div class="action-buttons-holder">
         <div>
-          <button class="button button-balanced" ng-click="createShiftPattern(shiftPatternName, abbreviation)">
-            <ion-spinner icon="lines" class="join-leave-loader" ng-show="buttonClicked"></ion-spinner>
-            Create
+          <button class="button button-balanced" ng-click="createShiftPattern(shiftPatternName, abbreviation)" ng-disabled="buttonClicked">
+            {{actionButtonText}}
           </button>
+          <ion-spinner icon="lines" class="join-leave-loader" ng-show="buttonClicked"></ion-spinner>
         </div>
       </div>
     </div>
