--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -11,7 +11,7 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <!-- Dashboard Tab -->
-  <ion-tab title="Shifts" icon="ion-calendar" href="#/tab/shifts">
+  <ion-tab title="Shifts" icon="ion-calendar" href="#/tab/shifts/">
     <ion-nav-view name="tab-shifts"></ion-nav-view>
   </ion-tab>
 
