--- a/www/templates/shifts-input.html
+++ b/www/templates/shifts-input.html
@@ -3,6 +3,17 @@
     <a class="button button-icon icon ion-android-more-vertical" ng-click="popover.show($event)"></a>
   </ion-nav-buttons>
   <ion-content>
+    <ion-tabs class="tabs-striped tabs-top tabs-calm">
+      <ion-tab href="#/tab/shifts" title="View" icon-on="ion-ios-filing" icon-off="ion-ios-filing-outline">
+        <!-- <ion-nav-view name="tab-shifts"></ion-nav-view> -->
+      </ion-tab>
+      <ion-tab href="#/tab/shifts/input" title="Input" icon-on="ion-ios-filing" icon-off="ion-ios-filing-outline">
+        <!-- <ion-nav-view name="shifts-input"></ion-nav-view> -->
+      </ion-tab>
+      <ion-tab href="#/tab/shifts/patterns" title="Patterns" icon-on="ion-ios-filing" icon-off="ion-ios-filing-outline">
+        <!-- <ion-nav-view name="shifts-patterns"></ion-nav-view> -->
+      </ion-tab>
+    </ion-tabs>
     <ion-list>
       <ion-item>
       1
