--- a/www/templates/tab-groups.html
+++ b/www/templates/tab-groups.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Groups" ng-init="fetchGroups()">
   <ion-nav-buttons side="right" >
-    <a class="button button-icon icon ion-plus-round" href="#/tab/groups/create"></a>
+    <a class="button button-clear button-white" href="#/tab/groups/create">Add</a>
   </ion-nav-buttons>
   <div class="row loader-holder">
     <ion-spinner class="actual-loader spinner-positive" icon="lines" ng-show="loader"></ion-spinner>
