Switch tab naming to swaps

--- a/www/templates/tab-shifts.html
+++ b/www/templates/tab-shifts.html
@@ -6,7 +6,7 @@
   <div class="tabs-striped tabs-top tabs-background-calm tabs-color-light">
     <div class="tabs">
       <a class="tab-item" ng-class="viewTab ? 'active' : ''" ng-click="viewTabClicked()">
-        View
+        Swap
       </a>
       <a class="tab-item" ng-class="inputTab ? 'active' : ''" ng-click="inputTabClicked()">
         Input
