Back buttons go back to right tab on shifts

--- a/www/templates/shifts-patterns-detail.html
+++ b/www/templates/shifts-patterns-detail.html
@@ -1,7 +1,7 @@
 <ion-view>
 <ion-nav-title>Edit</ion-nav-title>
   <ion-nav-buttons side="left" >
-    <a class="button button-icon icon ion-ios-arrow-back" href="#/tab/shifts">Patterns</a>
+    <a class="button button-icon icon ion-ios-arrow-back" href="#/tab/shifts/patterns">Patterns</a>
   </ion-nav-buttons>
   <ion-content>
     <div class="shift-patterns-detail">
