--- a/www/templates/tab-shifts.html
+++ b/www/templates/tab-shifts.html
@@ -20,6 +20,33 @@
     <ion-spinner class="actual-loader spinner-positive" icon="lines" ng-show="loader"></ion-spinner>
   </div>
   <ion-content class="has-top-nav">
+    <div class="shifts-input" ng-controller="ShiftsInputCtrl" ng-show="inputTab">
+      <div class="calendar-holder">
+        <ion-slide-box on-slide-changed="slideHasChanged($index)" show-pager="false" auto-play="false">
+          <ion-slide ng-repeat="month in calendarObjects">
+            <div class="month-bar">
+              <h1>{{month.title}}</h1>
+            </div>
+            <div class="days-of-week-bar">
+              <div class="row">
+                <div class="col">S</div>
+                <div class="col">M</div>
+                <div class="col">T</div>
+                <div class="col">W</div>
+                <div class="col">T</div>
+                <div class="col">F</div>
+                <div class="col">S</div>
+              </div>
+            </div>
+            <div class="dates">
+              <div class="row" ng-repeat="row in month.rows">
+                <div class="col" ng-repeat="date in row">{{date.dayNum}}</div>
+              </div>
+            </div>
+          </ion-slide>
+        </ion-slide-box>
+      </div>
+    </div>
 
     <div class="shifts-patterns" ng-controller="ShiftsPatternsCtrl" ng-show="patternsTab">
       <notification ng-model="message" ng-show="message"></notification>
