--- a/www/templates/tab-shifts.html
+++ b/www/templates/tab-shifts.html
@@ -5,7 +5,7 @@
 
   <div class="tabs-striped tabs-top tabs-background-calm tabs-color-light">
     <div class="tabs">
-      <a class="tab-item" ng-class="viewTab ? 'active' : ''" ng-click="viewTabClicked()">
+      <a class="tab-item" ng-class="swapTab ? 'active' : ''" ng-click="swapTabClicked()">
         Swap
       </a>
       <a class="tab-item" ng-class="inputTab ? 'active' : ''" ng-click="inputTabClicked()">
@@ -20,6 +20,49 @@
     <ion-spinner class="actual-loader spinner-positive" icon="lines" ng-show="loader"></ion-spinner>
   </div>
   <ion-content class="has-top-nav">
+    <div class="shifts-input" ng-controller="ShiftsInputCtrl" ng-show="swapTab">
+      <div class="calendar-holder">
+        <ion-slide-box on-slide-changed="slideHasChanged($index)" show-pager="false" auto-play="false" active-slide="12">
+          <ion-slide ng-repeat="month in calendarObjects">
+            <div class="month-bar stable-bg">
+              <span class="icon-holder back-icon" ng-click="previousSlide()">
+                <i class="icon ion-ios-arrow-back"></i>
+              </span>
+              <span>
+                {{month.title}}
+              </span>
+              <span class="icon-holder forward-icon" ng-click="nextSlide()">
+                <i class="icon ion-ios-arrow-forward"></i>
+              </span>
+            </div>
+            <div class="days-of-week-bar">
+              <div class="row">
+                <div class="col special">S</div>
+                <div class="col">M</div>
+                <div class="col">T</div>
+                <div class="col">W</div>
+                <div class="col">T</div>
+                <div class="col">F</div>
+                <div class="col special">S</div>
+              </div>
+            </div>
+            <div class="dates">
+              <div class="row" ng-repeat="row in month.rows">
+                <div class="col" ng-repeat="date in row" ng-class="date.isInCurrentMonth ? '' : 'not-current-month'">
+                  <div class="date-number">
+                    {{date.dayNum}}
+                  </div>
+                  <div class="content-text">
+                    Dx
+                  </div>
+                </div>
+              </div>
+            </div>
+          </ion-slide>
+        </ion-slide-box>
+      </div>
+    </div>
+
     <div class="shifts-input" ng-controller="ShiftsInputCtrl" ng-show="inputTab">
       <div class="calendar-holder">
         <ion-slide-box on-slide-changed="slideHasChanged($index)" show-pager="false" auto-play="false" active-slide="12">
